--- a/tabexpand.css
+++ b/tabexpand.css
@@ -74,7 +74,7 @@ margin: 7px;
 }
 
 .btn-header{
-background: url("../img/btn.png") repeat scroll 0 0 transparent;
+background: #ccc;
 border: 0 none;
 color: #003366;
 text-align: center;
@@ -85,7 +85,7 @@ cursor: pointer;
 }
 
 .btn-footer{
-background: url("../img/btn.png") repeat scroll 0 0 transparent;
+background: #ccc;
     border: 0 none;
     color: #003366;
     float: left;
@@ -177,6 +177,6 @@ cursor: pointer;
 }
 
 .table_a{border: 1px solid navy;}
-.table_b{height: 16px;background: url('../img/tbl.jpg');}
+.table_b{height: 16px;background: #ccc;}
 .table_b span{font-family: sans-serif;font-size: 11px;font: bold;color: #FFFFFF;margin-left: 18px;}
 
